syntax = "proto3";

package blacksquaremedia.reason.util;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_sizecache_all) = false;

option go_package = "github.com/bsm/reason/util";
option java_package = "com.blacksquaremedia.reason";
option java_outer_classname = "UtilProtos";

// Vector is an auto-expanding a vector data type.
message Vector {
  repeated double data = 1 [packed=true];
}

// Matrix is an auto-expanding matrix data type.
message Matrix {
  uint32 stride = 1;
  repeated double data = 2 [packed=true];
}

// NumStream allows to extract statistical information from
// a stream of numbers in a single-pass.
message NumStream {
  double weight = 1;
  double sum = 2;
  double sum_squares = 3;
  double min = 4;
  double max = 5;
}

// NumStreams is an auto-expanding NumStream distribution.
message NumStreams {
  repeated NumStream data = 1 [(gogoproto.nullable)=false];
}
